added action btn & added mode

--- a/client/src/components/ActionTile/ActionTile.module.scss
+++ b/client/src/components/ActionTile/ActionTile.module.scss
@@ -29,3 +29,20 @@
   display: flex;
   text-align: center;
 }
+
+.action_wrapper {
+  display: flex;
+  justify-content: flex-start;
+
+  margin-top: $spacingUnit5;
+}
+
+.button_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
