--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
   align-items: center;
-
+  box-sizing: border-box;
   display: flex;
   height: 64px;
 
@@ -11,6 +11,7 @@
   
   margin: 0 auto;
   justify-content: space-between;
+  padding: 0 32px;
 }
 
 .row_wrapper {
