--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -6,9 +6,9 @@
 
 body {
   margin: 0px;
-  padding: 0 $spacingUnit29;
+  padding: 0 $spacingUnit29 $spacingUnit8;
 
-  background-color: $colorBackground;
+  background-color: $colorGlobalBackground;
 }
 
 h1, h2, h3, p {
