--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -21,23 +21,38 @@
 }
 
 .login {
-  @include text-header(20, 600);
+  @include fontHeader2();
+
+  width: auto;
+  height: 32px;
+
+  background-color: $colorGlobalBackground;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
 
   margin: 0;
+  padding: $spacingUnit1 $spacingUnit4;
+  
+  outline: none;
+
+  &:hover {
+    background-color: $colorGlobalBackgroundHover;
+  }
 }
 
 .logout_btn {
-  @include shape(30px, $border-radius: 8px);
+  @include shape(32px, $border-radius: 16px);
 
-  background-color: $colorBackground;
+  background-color: $colorGlobalBackground;
   border: none;
   cursor: pointer;
   
   outline: none;
-  padding: 5px 7px 5px 3px;
+  padding: 6px 7px 5px 3px;
   margin-left: $spacingUnit4;
-}
 
-.logout_btn:hover {
-  background-color: $colorButtonLogOutHover;
+  &:hover {
+    background-color: $colorGlobalBackgroundHover;
+  }
 }
