--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cousine&display=swap');
 
 body {
+  font-family: Montserrat;
   margin: 0px;
   padding: 0 $spacingUnit29 $spacingUnit8;
 
